--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,13 @@
   "license": "MIT",
   "description": "Webman plugin kriss/webman-debugbar",
   "require": {
+    "php": ">=7.4",
+    "maximebf/debugbar": "^1.18",
+    "workerman/webman-framework": "^1.3"
   },
   "autoload": {
     "psr-4": {
-      "Kriss\\WebmanDebugbar\\": "src"
+      "Kriss\\WebmanDebugBar\\": "src"
     }
   }
 }
