feature: storage 支持自动清理的功能

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   },
   "require-dev": {
     "illuminate/database": "^8.83",
-    "illuminate/events": "^8.83"
+    "illuminate/events": "^8.83",
+    "symfony/finder": "^5.4"
   }
 }
