feature: 增加 laravel redis 的 collector

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   "require-dev": {
     "illuminate/database": "^8.83",
     "illuminate/events": "^8.83",
+    "illuminate/redis": "^8.83",
     "symfony/finder": "^5.4"
   }
 }
