--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
   "description": "Webman plugin webman-tech/debugbar",
   "require": {
     "php": ">=7.2",
-    "maximebf/debugbar": "^1.18",
-    "workerman/webman-framework": "^1.3"
+    "maximebf/debugbar": "^1.18"
   },
   "autoload": {
     "psr-4": {
@@ -17,6 +16,7 @@
     "illuminate/database": "^8.83",
     "illuminate/events": "^8.83",
     "illuminate/redis": "^8.83",
-    "symfony/finder": "^5.4"
+    "symfony/finder": "^5.4",
+    "workerman/webman-framework": "^1.4"
   }
 }
