--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "illuminate/events": "^8.83",
     "illuminate/redis": "^8.83",
     "symfony/finder": "^5.4",
-    "workerman/webman-framework": "^1.4"
+    "workerman/webman-framework": "^1.4",
+    "topthink/think-orm": "^2.0"
   }
 }
