feature: 添加 common-utils，使得组件解除与 webman 的强依赖

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   },
   "require": {
     "php": "^8.2",
+    "webman-tech/common-utils": "^1.0 || dev-main",
     "php-debugbar/php-debugbar": "^2.0"
   }
 }
